<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nav.pensjon</groupId>
    <artifactId>testdata</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>testdata</name>
    <description>Load-unload-testdata-pensjon</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <spring.version>2.1.8.RELEASE</spring.version>
        <micrometer.version>1.1.6</micrometer.version>
        <tjenestespesifikansjoner.version>1.2020.03.10-15.42-d63c3fb8f3b8</tjenestespesifikansjoner.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.ws</groupId>
            <artifactId>jaxws-api</artifactId>
            <version>2.2</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
            <version>${spring.version}</version>
            <!--exclusions>
                <exclusion>
                    <groupId>org.apache.tomcat</groupId>
                    <artifactId>tomcat-jdbc</artifactId>
                </exclusion>
            </exclusions-->
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>2.9.2</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>2.9.2</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-core</artifactId>
            <version>${micrometer.version}</version>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
            <version>${micrometer.version}</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.ojdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <version>19.3.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.8.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.11.2</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>no.nav.tjenestespesifikasjoner</groupId>
			<artifactId>pensjon-vedtaksbrev-tjenestespesifikasjon</artifactId>
            <version>${tjenestespesifikansjoner.version}</version>
		</dependency>
        <dependency>
            <groupId>no.nav.tjenestespesifikasjoner</groupId>
            <artifactId>pensjon-behandleAutomatiskOmregning-v1-tjenestespesifikasjon</artifactId>
            <version>${tjenestespesifikansjoner.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <!-- Det generelle interne Nexus-repoet til NAV (brukes kun internt) -->
        <repository>
            <id>nexus-internal-release</id>
            <url>https://repo.adeo.no/repository/maven-release</url>
        </repository>
        <!-- Mirror foran Maven Central NAV (brukes kun internt) -->
        <repository>
            <id>nexus-internal-mirror</id>
            <url>https://repo.adeo.no/repository/maven-public</url>
        </repository>
        <!-- Skal brukes hvis bygget kjører internt (f.eks. Jenkins, fra utviklerimage, eller via ScaleFT) -->
        <repository>
            <id>internal-mirror-github-navikt</id>
            <url>https://repo.adeo.no/repository/github-package-registry-navikt/</url>
        </repository>
        <!-- Skal brukes hvis bygget kjøres fra en Github Action -->
        <repository>
            <id>github-package-registry-navikt</id>
            <url>https://maven.pkg.github.com/navikt/maven-release</url>
        </repository>
        <!-- Skal brukes hvis bygget kjører utenfor NAV (f.eks. en ekstern maskin, eller Circle CI) -->
        <repository>
            <id>external-mirror-github-navikt</id>
            <url>https://github-package-registry-mirror.gc.nav.no/cached/maven-release</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.version}</version>
                <configuration>
                    <jvmArguments>
                        -Xverify:none -XX:TieredStopAtLevel=1
                    </jvmArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
